# paddleocr_cli

./: .gitignore  .goreleaser.yaml  README.go.md  README.md  __init__.py  go.mod  pyproject.toml
.github/workflows/: publish.yml
cmd/paddleocr-cli/: main.go
internal/config/: config.go
internal/ocr/: client.go
src/paddleocr_cli/: __init__.py
